lib/src/bindings/flutter_recorder_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:flutter_recorder/src/flutter_recorder.h')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function()>()
external void flutter_recorder_createWorkerInWasm();

@ffi.Native<
  ffi.Void Function(dartSilenceChangedCallback_t, dartStreamDataCallback_t)
>()
external void flutter_recorder_setDartEventCallback(
  dartSilenceChangedCallback_t silence_changed_callback,
  dartStreamDataCallback_t stream_data_callback,
);

@ffi.Native<ffi.Void Function(dartVisualizationCallback_t)>()
external void flutter_recorder_setDartVisualizationCallback(
  dartVisualizationCallback_t callback,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void flutter_recorder_nativeFree(ffi.Pointer<ffi.Void> pointer);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Int>,
  )
>()
external void flutter_recorder_listCaptureDevices(
  ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
  ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
  ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
  ffi.Pointer<ffi.Int> n_devices,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Pointer<ffi.Pointer<ffi.Int>>,
    ffi.Int,
  )
>()
external void flutter_recorder_freeListCaptureDevices(
  ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
  ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
  ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
  int n_devices,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Int,
    ffi.Int,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
  )
>()
external int flutter_recorder_init(
  int deviceID,
  int pcmFormat,
  int sampleRate,
  int channels,
  int androidInputPreset,
);

@ffi.Native<ffi.Void Function()>()
external void flutter_recorder_deinit();

@ffi.Native<ffi.Int Function()>()
external int flutter_recorder_isInited();

@ffi.Native<ffi.Int Function()>()
external int flutter_recorder_isDeviceStarted();

@ffi.Native<ffi.UnsignedInt Function()>()
external int flutter_recorder_start();

@ffi.Native<ffi.Void Function()>()
external void flutter_recorder_stop();

@ffi.Native<ffi.Void Function(ffi.Int)>()
external void flutter_recorder_startStreamingData(int streamingFormat);

@ffi.Native<ffi.Void Function()>()
external void flutter_recorder_stopStreamingData();

@ffi.Native<ffi.Void Function(ffi.Bool)>()
external void flutter_recorder_setSilenceDetection(bool enable);

@ffi.Native<ffi.Void Function(ffi.Float)>()
external void flutter_recorder_setSilenceThresholdDb(double silenceThresholdDb);

@ffi.Native<ffi.Void Function(ffi.Float)>()
external void flutter_recorder_setSilenceDuration(double silenceDuration);

@ffi.Native<ffi.Void Function(ffi.Float)>()
external void flutter_recorder_setSecondsOfAudioToWriteBefore(
  double secondsOfAudioToWriteBefore,
);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int flutter_recorder_startRecording(
  ffi.Pointer<ffi.Char> path,
  int recordingFormat,
);

@ffi.Native<ffi.Void Function(ffi.Bool)>()
external void flutter_recorder_setPauseRecording(bool pause);

@ffi.Native<ffi.Void Function()>()
external void flutter_recorder_stopRecording();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Float>)>()
external void flutter_recorder_getVolumeDb(ffi.Pointer<ffi.Float> volumeDb);

@ffi.Native<ffi.UnsignedInt Function(ffi.Bool, ffi.Int, ffi.Int, ffi.Int)>()
external int flutter_recorder_setVisualizationEnabled(
  bool enabled,
  int windowSize,
  int kind,
  int channel,
);

@ffi.Native<ffi.Int Function()>()
external int flutter_recorder_isVisualizationEnabled();

@ffi.Native<ffi.Void Function(ffi.Float)>()
external void flutter_recorder_setFftSmoothing(double smooth);

/// //////////////////////
/// FILTERS
/// //////////////////////
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int flutter_recorder_isFilterActive(int filterType);

@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>()
external int flutter_recorder_addFilter(int filterType);

@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>()
external int flutter_recorder_removeFilter(int filterType);

@ffi.Native<
  ffi.Void Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Int>,
  )
>()
external void flutter_recorder_getFilterParamNames(
  int filterType,
  ffi.Pointer<ffi.Pointer<ffi.Char>> names,
  ffi.Pointer<ffi.Int> paramsCount,
);

@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Int, ffi.Float)>()
external void flutter_recorder_setFilterParams(
  int filterType,
  int attributeId,
  double value,
);

@ffi.Native<ffi.Float Function(ffi.UnsignedInt, ffi.Int)>()
external double flutter_recorder_getFilterParams(
  int filterType,
  int attributeId,
);

typedef dartSilenceChangedCallback_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.Bool>, ffi.Pointer<ffi.Float>);
typedef DartdartSilenceChangedCallback_tFunction =
    void Function(ffi.Pointer<ffi.Bool>, ffi.Pointer<ffi.Float>);
typedef dartSilenceChangedCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartSilenceChangedCallback_tFunction>>;
typedef dartStreamDataCallback_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.UnsignedChar> data, ffi.Int dataLength);
typedef DartdartStreamDataCallback_tFunction =
    void Function(ffi.Pointer<ffi.UnsignedChar> data, int dataLength);
typedef dartStreamDataCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartStreamDataCallback_tFunction>>;
typedef dartVisualizationCallback_tFunction =
    ffi.Void Function(
      ffi.Int channelCount,
      ffi.Pointer<ffi.Pointer<ffi.Float>> waveDataPerChannel,
      ffi.Int waveSamples,
      ffi.Pointer<ffi.Pointer<ffi.Float>> fftDataPerChannel,
      ffi.Int fftSamples,
    );
typedef DartdartVisualizationCallback_tFunction =
    void Function(
      int channelCount,
      ffi.Pointer<ffi.Pointer<ffi.Float>> waveDataPerChannel,
      int waveSamples,
      ffi.Pointer<ffi.Pointer<ffi.Float>> fftDataPerChannel,
      int fftSamples,
    );
typedef dartVisualizationCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartVisualizationCallback_tFunction>>;

/// Possible capture errors
sealed class CaptureErrors {
  /// No error
  static const captureNoError = 0;

  /// The capture device has failed to initialize.
  static const captureInitFailed = 1;

  /// The capture device has not yet been initialized.
  static const captureNotInited = 2;

  /// Failed to start the device.
  static const failedToStartDevice = 3;

  /// Failed to initialize wav recording.
  static const failedToInitializeRecording = 4;

  /// Invalid arguments while initializing wav recording.
  static const invalidArgs = 5;

  /// Failed to write wav file.
  static const failedToWriteWav = 6;

  /// Filter not found
  static const filterNotFound = 7;

  /// The filter has already been added.
  static const filterAlreadyAdded = 8;

  /// Error getting filter parameter.
  static const filterParameterGetError = 9;
}

sealed class RecorderFilterType {
  static const autogain = 0;
  static const echoCancellation = 1;
}
